- added new setting 'isAutoJSValidation' which is on by default; zm_form and
  zm_secure_form will automatically add JS validation code if it exists;
	this means all required is to set up validation rules and create the form
	using zm_form or zm_secure_form!
- make ZenMagick code fail gracefully *if* all patches are reverted *and* the
  zenmagick folder gets removed (I know this still leaves a trail fo unused
	files, but still better than what we have now)
- added a meta tag: generator = ZenMagick [version] to the default_layout
- fixed server side validation code (has not been used until now)
- added new ZMSession class that acts as wrapper around $_SESSION in order to
  keep access to $_SESSION central and simple
- default and demo theme version now follow the main ZenMagick version number
- added ZMFieldMatchRule validation rule to validate new password and confirm
  password
- simplified the ZMMinRule setup, as name and min length are passed as
  parameter already (since we only use the min value, the format needed to be
	changed to %2$s to access the second format parameter rather than just using
	%s; please see http://www.php.net/manual/en/function.sprintf.php for more
	details)
- all regular access to $_GET and $_POST is now wrapped in zm_sanitize(..) calls
- refactored zm_db_value_list() into ZMDao::bindValueList(..)
- account subscriptions changed a bit to make the DAO more consistent - this
  required minor changes to a couple account views and controllers;
	basically ZMSubscriptions got dumped and all information moved into ZMAccount
- removed companyName from ZMAccount
- had to change email parameter handling - sorry! zen-cart values are now
  directly available under their respective names, for example 
	$INTRO_ORDER_NUMBER; zc_args does not exist any more.
- added code to handle forgotten password submits
- fix: getCompanyName() in create_account view needs to be called on
  zm_address rather than zm_account